--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "homepage": "https://codytodonnell.github.io/strudel-kit/demo/",
   "scripts": {
     "generate:files": "node scripts/generate-file-entities.js",
-    "predev": "npm run generate:files",
+    "watch:files": "node scripts/watch-csv-files.js",
     "prebuild": "npm run generate:files",
     "start": "vite",
-    "dev": "vite",
+    "dev": "concurrently \"npm run watch:files\" \"vite\"",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist -e demo",
@@ -50,6 +50,7 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "concurrently": "^9.2.1",
     "cypress": "^13.15.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
